estilos en proceso, lógica jugadores lista

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
 }
+
+.title {
+  width: 30%;
+  height: 150px;
+  font-size: 60px;
+  background: rgba(33, 81, 9, 0.412);
+  border: 8px;
+  display: inline-block;
+  text-align: center;
+  line-height: 150px;
+}
