lógica lista, definiendo estilos

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,13 +2,44 @@
   text-align: center;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+#root {
+  margin: 0 auto;
+}
+
 .title {
   width: 30%;
   height: 150px;
   font-size: 60px;
   background: rgba(33, 81, 9, 0.412);
-  border: 8px;
+  border: 8px solid brown;
   display: inline-block;
   text-align: center;
   line-height: 150px;
+}
+
+button {
+  display: block;
+  margin: 0 auto;
+  margin: 10px;
+}
+
+.container {
+  width: 950px;
+  margin: 0 auto;
+}
+
+.menu {
+  text-align: center;
+  width: 90%;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
