--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: rgba(142, 57, 0, 0.71);
 }
 
 #root {
@@ -13,14 +14,15 @@ body {
 }
 
 .title {
-  width: 30%;
+  width: 33%;
   height: 150px;
   font-size: 60px;
   background: rgba(33, 81, 9, 0.412);
-  border: 8px solid brown;
-  display: inline-block;
+  border: 1px solid black;
+  float: left;
   text-align: center;
   line-height: 150px;
+  border-radius: 9px;
 }
 
 button {
@@ -37,6 +39,10 @@ button {
 .menu {
   text-align: center;
   width: 90%;
+}
+
+h1 {
+  width: 109%;
 }
 
 p {
